# advent_of_rust

./: Cargo.toml
2021/task_10/src/: lib.rs
2021/task_11/: Cargo.toml
2021/task_11/src/: lib.rs
2021/task_12/: Cargo.toml
2021/task_12/src/: lib.rs
2021/task_13/: Cargo.toml
2021/task_13/src/: lib.rs
2021/task_14/: Cargo.toml
2021/task_14/src/: lib.rs
2021/task_3/: Cargo.toml
2021/task_4/src/: lib.rs
2021/task_5/src/: lib.rs
2021/task_6/: Cargo.toml
2021/task_7/src/: lib.rs
2021/task_8/src/: lib.rs
2021/task_9/: Cargo.toml
2023/task_1/: Cargo.toml
2023/task_2/: Cargo.toml
advent/: Cargo.toml
advent/src/: main.rs
read_file/src/: lib.rs
task_1/: Cargo.toml
task_1/src/: lib.rs
task_10/: Cargo.toml
task_2/: Cargo.toml
task_2/src/: lib.rs
task_3/src/: lib.rs
task_4/: Cargo.toml
task_5/: Cargo.toml
task_6/src/: lib.rs
task_7/: Cargo.toml
task_8/: Cargo.toml
task_9/src/: lib.rs
undefined/: Cargo.toml
undefined/src/: lib.rs
