
[workspace]
members = ["advent","read_file","task_1","task_2","task_3","task_4","undefined"]
default-members=["advent"]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
# name = "advent_of_rust_2021"
# licence = "./LICENSE"


# [[bin]]
# name = "advent"
# path = "./advent/src/main.rs"
