[package]
name = "advent"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
rand = "0.8.5"
read_file = {path = "../read_file"}
# task_1 = {path = "../task_1"}
# task_2 = {path = "../task_2"}
# task_3 = {path = "../task_3"}
# task_4 = {path = "../task_4"}
# task_5 = {path = "../task_5"}
# task_6 = {path = "../task_6"}
# task_7 = {path = "../task_7"}
# task_8 = {path = "../task_8"}
# task_10 = {path = "../task_10"}
# task_11 = {path = "../task_11"}
# task_12 = {path = "../task_12"}
# task_13 = {path = "../task_13"}
task_14 = {path = "../2021/task_14"}
undefined = {path = "../undefined"}
